2000-11-12  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/IMLoading.h:
	* Model/IMLoading.m:
	Removed NSBundle extension methods.
	* Source/NSApplication.m: [finishLaunching] removed uneeded call
	to loadGModel:owner: as this gets done in loadNibNamed:owner:.
	* Source/NSBundleAdditions.m: [loadNibNamed:owner:] removed unused
	local variable file. 
	
2000-11-12  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/GSSimpleLayoutManager.m: Renamed the ivars of
	_GNULineLayoutInfo to correspond to those of
	GSLineLayoutInfo. Call a few more abstract methods. Added
	AutoreleasePool in [rebuildForRange:delta:inTextContainer:] to free
	up memory.

Thu Nov  9 09:49:07 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Source/GSInfoPanel.m ([GSInfoPanel -initWithDictionary:]): Use
	Helvetica-Bold rather than Helvetica-BoldOblique for titles.

2000-11-06  Adam Fedor  <fedor@gnu.org>

	* Documentation: Move tmpl.texi files to texi and update GNUmakefile

2000-11-06  Fred Kiefer  <FredKiefer@gmx.de>

	* Source/GSSimpleLayoutManager.m: Get the fragmentRect used for
	layout from the text container
	* Source/NSText.m: In [setVerticallyResizable:] and
	[setHorizontallyResizable:] set the size of the text conatainer.

Mon Nov  6 17:02:27 2000  Nicola Pero  <n.pero@mi.flashnet.it>

	* Documentation/GNUmakefile, Documentation/gsdoc/GNUmakefile:
	Install the documentation in the appropriate subdirectories of
	Documentation/Developers/Gui.

2000-11-05  Adam Fedor  <fedor@gnu.org>

	* Source/NSScreen.m (+mainScreen): Make the mainScreen a shared
	instance.

	* Source/NSClipView.m (-setBoundsOrigin:): If our documentView is 
	focused, translate the PS context to the new bounds.

2000-11-05  Fred Kiefer  <FredKiefer@gmx.de>

	* Headers/gnustep/gui/NSClipView.h:
	* Headers/gnustep/gui/NSScrollView.h:
	Added method to set backgound drawing.
	* Model/GMAppKit.m: Store new ivar for NSClipView	
	* Source/NSScrollView.m: Hand on background drawing to content